--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -4,7 +4,6 @@
   padding-left: 20px;
   padding-right: 20px;
   align-items: center;
-  outline: 1px solid red;
   margin: 0 auto;
 }
 
@@ -14,8 +13,8 @@
 }
 
 .icon_logo {
-  max-width: 36px;
-  max-height: 13px;
+  width: 36px;
+  height: 13px;
   fill: #e6533c;
 }
 
@@ -47,6 +46,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-left: 16px;
   width: 37px;
   height: 37px;
   border: 1px solid #e6533c;
@@ -55,6 +55,7 @@
 
 .burger_menu_button {
   display: flex;
+  margin-left: 16px;
   align-items: center;
   justify-content: center;
   border: none;
