--- a/src/components/DayProdcuts/DayProducts.module.css
+++ b/src/components/DayProdcuts/DayProducts.module.css
@@ -11,7 +11,8 @@
     linear-gradient(0deg, rgba(239, 237, 232, 0.046), rgba(239, 237, 232, 0.05));
   padding: 16px;
   margin-bottom: 40px;
-  height: 250px;
+  min-height: 250px;
+  max-height: 834px;
   overflow: auto;
 }
 .productsTopBar {
@@ -45,10 +46,12 @@
   color: #efede843;
 }
 .noProductsText {
+  width: 121px;
   font-size: 14px;
   line-height: 18px;
   color: #efede83a;
-  margin: 0 auto;
+  margin: 0  auto;
+  margin-top: 80px;
 }
 .adaptiveTitlesList {
   display: none;
