--- a/src/pages/DiaryPage/DiaryPage.module.css
+++ b/src/pages/DiaryPage/DiaryPage.module.css
@@ -25,6 +25,7 @@ body {
 }
 .reminder {
   width: auto;
+  display: flex;
   height: 54px;
   font-size: 14px;
   line-height: 18px;
@@ -32,13 +33,10 @@ body {
   margin-bottom: 40px;
   color: #efede8a1;
 }
-.reminderText::before {
-  content: '';
-  display: inline-block;
-  border-radius: 50%;
-  width: 24px;
-  height: 24px;
-  background-color: palevioletred;
+.reminderIcon{
+  display: flex;
+  fill: var(--beige-color);
+  stroke: #fff;
   margin-right: 8px;
 }
 @media screen and (min-width: 375px) {
@@ -62,15 +60,22 @@ body {
     padding: 52px 96px 68px 96px;
   }
   .reminder {
-    position: relative;
-    top: 300px;
-    left: 954px;
-    width: 390px;
-    margin-bottom: 0px;
+    position: static;
+    width: 308px;
+    margin: 0px;
+    margin-top: 48px;
     font-size: 16px;
     line-height: 24px;
   }
   .topBar {
     margin-bottom: 32px;
+  }
+  .bottomBar{
+    display: flex;
+    flex-direction: row-reverse;
+  }
+  .bottomRightBar{
+    margin-left: 32px;
+    align-items: center;
   }
 }
