--- a/src/components/ExercisesTable/ExerciseModal.module.css
+++ b/src/components/ExercisesTable/ExerciseModal.module.css
@@ -182,6 +182,13 @@
   font-weight: 700;
   line-height: 32px; /* 133.333% */
 }
+.textBox {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+}
 .doneTip {
   color: rgba(239, 237, 232, 0.3);
   /* font-family: Roboto; */
@@ -197,6 +204,34 @@
   font-style: normal;
   font-weight: 400;
   line-height: 18px; /* 128.571% */
+}
+.btnDone {
+  display: flex;
+  padding: 14px 32px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 12px;
+  background: #e6533c;
+  color: white;
+}
+.link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: rgba(239, 237, 232, 0.3);
+  font-family: Roboto;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 18px; /* 128.571% */
+}
+.linkArrow {
+  width: 16px;
+  height: 16px;
+  fill: #efede84d;
+  stroke: #efede84d;
 }
 
 @media screen and (min-width: 768px) {
