--- a/src/components/ExercisesTable/ExerciseModal.module.css
+++ b/src/components/ExercisesTable/ExerciseModal.module.css
@@ -87,7 +87,7 @@
 }
 .coment {
   color: rgba(239, 237, 232, 0.3);
-  /* font-family: 'Roboto'; */
+  font-family: Roboto-400;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -134,15 +134,15 @@
 .time {
   color: rgba(239, 237, 232, 0.4);
   font-feature-settings: 'clig' off, 'liga' off;
-  /* font-family: Roboto; */
+  font-family: Roboto-400;
   font-size: 10px;
   font-style: normal;
   font-weight: 400;
   line-height: 14px; /* 140% */
 }
-.timerBox,
+/* .timerBox,
 .infoBox {
-}
+} */
 .close {
   display: none;
   position: absolute;
@@ -176,7 +176,7 @@
 }
 .title {
   color: #efede8;
-  /* font-family: Roboto; */
+  font-family: Roboto-700;
   font-size: 24px;
   font-style: normal;
   font-weight: 700;
@@ -191,7 +191,7 @@
 }
 .doneTip {
   color: rgba(239, 237, 232, 0.3);
-  /* font-family: Roboto; */
+  font-family: Roboto-400;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -199,7 +199,7 @@
 }
 .doneScore {
   color: #e6533c;
-  /* font-family: Roboto; */
+  font-family: Roboto-400;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -221,7 +221,7 @@
   justify-content: center;
   align-items: center;
   color: rgba(239, 237, 232, 0.3);
-  font-family: Roboto;
+  font-family: Roboto-400;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
