--- a/src/components/Calendar/StyledDatepicker.module.css
+++ b/src/components/Calendar/StyledDatepicker.module.css
@@ -36,7 +36,7 @@
   height: 354px;
   padding: 9px 18px;
   background-color: rgb(243, 62, 62);
-  font-family: Inter;
+  font-family: Roboto-400;
   border-radius: 16px;
 }
 
@@ -66,7 +66,7 @@
   border: none;
 }
 .react-datepicker__current-month {
-  font-family: Inter;
+  font-family: Roboto-400;
   font-size: 20px;
   font-style: normal;
   font-weight: 600;
@@ -77,7 +77,7 @@
 .react-datepicker__day-name {
   margin: 0;
   padding: 8px 8px;
-  font-family: Inter;
+  font-family: Roboto-400;
   font-size: 14px;
   font-style: normal;
   font-weight: 600;
@@ -120,7 +120,7 @@
   height: 32px;
   border-radius: 50%;
   color: white;
-  font-family: Inter;
+  font-family: Roboto-400;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
