--- a/src/components/ExclamationMark/ExclamationMark.module.css
+++ b/src/components/ExclamationMark/ExclamationMark.module.css
@@ -19,7 +19,7 @@
   stroke: #fff;
 }
 .text {
-  font-family: 'Roboto-400';
+  font-family: Roboto-400;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
