--- a/src/components/ExercisesCategories/ExercisesCategories.module.css
+++ b/src/components/ExercisesCategories/ExercisesCategories.module.css
@@ -10,7 +10,7 @@ body {
 
 .btnCategories {
   color: #efede8;
-  font-family: Roboto;
+  font-family: Roboto-400;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -49,7 +49,7 @@ body {
 
 .btnCategories.active {
   color: #EFEDE8;
-  font-family: Roboto;
+  font-family: Roboto-400;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -58,7 +58,7 @@ body {
 
 .btnCategories:not(.active) {
   color: rgba(239, 237, 232, 0.40);
-  font-family: Roboto;
+  font-family: Roboto-400;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -96,7 +96,8 @@ body {
   width: 100%;
   color: #efede8;
   font-feature-settings: 'clig' off, 'liga' off;
-  font-family: Roboto;
+  font-family: Roboto-400;
+  font-weight: 400;
 }
 
 .imageText {
@@ -144,7 +145,7 @@ h2 {
 
   .btnCategories.active {
     color: #EFEDE8;
-    font-family: Roboto;
+    font-family: Roboto-400;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
@@ -153,7 +154,7 @@ h2 {
 
   .btnCategories:not(.active) {
     color: rgba(239, 237, 232, 0.40);
-    font-family: Roboto;
+    font-family: Roboto-400;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
@@ -161,7 +162,7 @@ h2 {
   }
 }
 
-  
+
   .title {
     margin-bottom: 64px;
   }
@@ -172,7 +173,7 @@ h2 {
     width: 224px;
     height: 206px;
   }
-  
+
 
 @media (min-width: 1440px) {
   .phContainer {
@@ -182,7 +183,7 @@ h2 {
   }
   .btnCategories.active {
     color: #EFEDE8;
-    font-family: Roboto;
+    font-family: Roboto-400;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
@@ -191,7 +192,7 @@ h2 {
 
   .btnCategories:not(.active) {
     color: rgba(239, 237, 232, 0.40);
-    font-family: Roboto;
+    font-family: Roboto-400;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
