--- a/src/components/TitlePageExercises/TitleExercise.module.css
+++ b/src/components/TitlePageExercises/TitleExercise.module.css
@@ -1,6 +1,6 @@
 .title {
     color: #EFEDE8;
-    font-family: Roboto;
+    font-family: Roboto-700;
     font-size: 24px;
     font-style: normal;
     font-weight: 700;
@@ -8,7 +8,7 @@
     margin-top: 100px;
     margin-left: 20px;
   }
-  
+
   .container {
     display: flex;
     justify-content: flex-start;
@@ -16,7 +16,7 @@
     flex-wrap: wrap;
     margin: 0 auto;
   }
-  
+
   /* При ширине экрана от 768px выравниваем элементы по горизонтали */
   @media (min-width: 768px) {
     .container {
