--- a/src/components/UserForm/UserForm.module.css
+++ b/src/components/UserForm/UserForm.module.css
@@ -4,7 +4,7 @@
 .section_title {
   margin-bottom: 8px;
   font-size: 12px;
-  color: rgba(239, 237, 232, 0.5)
+  color: rgba(239, 237, 232, 0.5);
 }
 .input {
   width: 335px;
@@ -63,12 +63,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #E6533C;
+  background-color: #e6533c;
   width: 136px;
   height: 42px;
   border-radius: 12px;
   border: none;
-  color: #EFEDE8;
+  color: #efede8;
   font-size: 16px;
   font-weight: 500;
   line-height: 18px;
@@ -77,12 +77,12 @@
   margin-top: 28px;
   margin-bottom: 12px;
   cursor: pointer;
-  }
+}
 
-  .button:hover,
-  .button:focus {
-    background-color: #EF8964;
-  }
+.button:hover,
+.button:focus {
+  background-color: #ef8964;
+}
 
 @media screen and (min-width: 768px) {
   .form_container {
