added mobile css profile

--- a/src/components/UserForm/UserForm.module.css
+++ b/src/components/UserForm/UserForm.module.css
@@ -19,7 +19,7 @@
   font-size: 14;
 }
 .input_field {
-  width: 165px;
+  width: 160px;
   padding: 14px;
   align-items: center;
   gap: 10px;
@@ -61,10 +61,39 @@
 }
 .wrapper_radio {
   display: flex;
-  margin-bottom: 32px;
+  flex-direction: column;
+  width: 100%;
+  margin-bottom: 40px;
+}
+.wrapper_radio_section {
+  display: flex;
+  flex-direction: row;
+  margin-right: 20px;
+  width: 100%;
+}
+.wrapper_radio_section_container_left{
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+.wrapper_radio_section_container_right {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding-top: 28px;
+  gap: 8px;
+}
+.wrapper_radio_section_blood {
+  font-family: 'Roboto-400';
+  display: flex;
+  flex-direction: row;
+  margin-right: 20px;
 }
 .wrapper_level {
-  margin-top: 40px;
+  margin-top: 16px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
 }
 .button {
   display: flex;
