--- a/src/pages/ProfilePage/ProfilePage.module.css
+++ b/src/pages/ProfilePage/ProfilePage.module.css
@@ -14,7 +14,7 @@
   align-items: center;
   gap: 14px;
   margin-top: 40px;
-  margin-left: 10px;
+  /* margin-left: 10px; */
 }
 
 @media screen and (min-width: 768px) {
