--- a/src/components/ExclamationMark/ExclamationMark.module.css
+++ b/src/components/ExclamationMark/ExclamationMark.module.css
@@ -34,5 +34,13 @@
   }
   .wrapper {
     width: 440px;
+    margin-top: 32px;
+  }
+  .text {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0px;
+    text-align: left;
   }
 }
