--- a/src/index.css
+++ b/src/index.css
@@ -90,7 +90,7 @@ button,
 a,
 input,
 p {
-  font-family: 'Roboto', sans-serif;
+  font-family: Roboto-400, sans-serif;
   font-weight: normal;
   font-style: normal;
 }
