--- a/src/components/TitlePageExercises/TitleExercise.module.css
+++ b/src/components/TitlePageExercises/TitleExercise.module.css
@@ -7,6 +7,7 @@
     line-height: 28px; /* 116.667% */
     margin-top: 100px;
     margin-left: 20px;
+    text-transform: capitalize;
   }
 
   .container {
