--- a/src/components/ExercisesItem/ExercissesItem.module.css
+++ b/src/components/ExercisesItem/ExercissesItem.module.css
@@ -169,3 +169,28 @@ svg {
   font-weight: 400;
   line-height: 24px; /* 120% */
 }
+
+
+@media (min-width: 768px) {
+  .exercises-item-box {
+    overflow-y: auto; 
+    max-height: 100vh; 
+    
+   
+    &::-webkit-scrollbar {
+      width: 8px;
+      height: 153px;
+    }
+
+  
+    &::-webkit-scrollbar-track {
+      border-radius: 12px;
+      background: rgba(239, 237, 232, 0.1);
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background: #ef8964;
+      border-radius: 12px;
+    }
+  }
+}
