--- a/src/components/AddProductSuccess/AddProductSuccess.module.css
+++ b/src/components/AddProductSuccess/AddProductSuccess.module.css
@@ -37,7 +37,7 @@
   top: 14px;
   right: 14px;
 
-  color: #efede8;
+  color: var(--white-color);
   background-color: transparent;
 
   cursor: pointer;
@@ -90,8 +90,10 @@
 .wellDone {
   margin-bottom: 16px;
 
-  color: #efede8;
+  color: var(--white-color);
   text-align: center;
+  font-family: Roboto-700;
+
   font-size: 24px;
   font-weight: 700;
   line-height: 1.33;
@@ -102,6 +104,7 @@
 
   text-align: center;
   color: rgba(239, 237, 232, 0.3);
+  font-family: Roboto-400;
   font-size: 14px;
   line-height: 1.29;
 
@@ -111,7 +114,7 @@
 }
 
 .kcalNumber {
-  color: #e6533c;
+  color: var(--orange-main-color);
 }
 
 .nextBtn {
@@ -126,11 +129,12 @@
   margin-bottom: 16px;
   padding: 12px 32px;
 
-  color: #efede8;
+  color: var(--white-color);
+  font-family: Roboto-500;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
-  background-color: #e6533c;
+  background-color: var(--orange-main-color);
   border-radius: 12px;
 
   @media screen and (min-width: 768px) {
@@ -152,6 +156,7 @@
 .link {
   margin-right: 8px;
   color: rgba(239, 237, 232, 0.3);
+  font-family: Roboto-400;
   font-size: 14px;
 }
 
