--- a/src/components/BasicModalWindow/BasicModalWindow.module.css
+++ b/src/components/BasicModalWindow/BasicModalWindow.module.css
@@ -61,6 +61,7 @@
 }
 
 .caloriesCount {
+  font-family: Roboto-400;
   color: rgba(239, 237, 232, 0.4);
   font-size: 12px;
 }
@@ -70,6 +71,7 @@
   padding-bottom: 8px;
   padding-left: 14px;
 
+  font-family: Roboto-400;
   font-size: 16px;
   color: rgba(239, 237, 232, 0.3);
   overflow: hidden;
@@ -78,7 +80,7 @@
 
   background-color: #10100f;
   border-radius: 12px;
-  border: 1px solid #e6533c;
+  border: 1px solid var(--orange-main-color);
 
   @media screen and (width: 375px) and (max-width: 767px) {
     margin-bottom: 16px;
@@ -102,12 +104,13 @@
 
   text-align: left;
 
-  color: #efede8;
+  font-family: Roboto-400;
+  color: var(--white-color);
   font-size: 16px;
 
   background-color: #10100f;
   border-radius: 12px;
-  border: 1px solid #e6533c;
+  border: 1px solid var(--orange-main-color);
 
   @media screen and (width: 375px) {
     width: 273px;
@@ -130,6 +133,7 @@
   top: 113px;
   width: 273px;
 
+  font-family: Roboto-400;
   color: rgba(239, 237, 232, 0.3);
   font-size: 12px;
 
@@ -155,7 +159,7 @@
   top: 14px;
   right: 14px;
 
-  color: #efede8;
+  color: var(--white-color);
   background-color: transparent;
 
   cursor: pointer;
@@ -206,11 +210,12 @@
   width: 151px;
   height: auto;
 
-  color: #efede8;
+  font-family: Roboto-500;
+  color: var(--white-color);
   font-size: 16px;
   font-weight: 500;
   border-radius: 12px;
-  background: #e6533c;
+  background: var(--orange-main-color);
   cursor: pointer;
 
   @media screen and (min-width: 768px) {
@@ -226,7 +231,8 @@
   padding: 12px 36px;
   width: 121px;
 
-  color: #efede8;
+  font-family: Roboto-500;
+  color: var(--white-color);
   font-size: 16px;
   font-weight: 500;
   background-color: transparent;
@@ -241,6 +247,6 @@
 }
 
 .kcalNumber {
-  color: #efede8;
+  color: var(--white-color);
   font-size: 12px;
 }
