--- a/src/components/DropDownSelectors/DropDownSelectors.module.css
+++ b/src/components/DropDownSelectors/DropDownSelectors.module.css
@@ -23,9 +23,10 @@
 
   cursor: pointer;
 
-  color: #efede8;
+  color: var(--white-color);
   font-size: 14px;
   text-align: left;
+  text-transform: capitalize;
   background-color: inherit;
 
   @media screen and (min-width: 768px) {
@@ -54,15 +55,15 @@
   transform: translateY(100%);
 
   padding: 14px;
-  padding-right: auto;
+  /* padding-right: auto; */
 
   border-radius: 12px;
-  background-color: #1c1c1c;
+  background-color: var(--option-list-color);
 
   z-index: 100;
 
   @media screen and (min-width: 768px) {
-    width: 164px;
+    width: 192px;
     font-size: 16px;
   }
 }
@@ -79,12 +80,13 @@
   outline: none;
   padding: 0;
 
-  color: #efede8;
+  color: var(--white-color);
+  font-family: Roboto-400;
   font-weight: 400;
   text-transform: capitalize;
   text-align: left;
   line-height: 1.5;
-  background-color: #1c1c1c;
+  background-color: var(--option-list-color);
   cursor: pointer;
 
   @media screen and (min-width: 1440px) {
@@ -100,6 +102,8 @@
 /* drop down type = recommended, not recommended*/
 .dropDownAllWrapper {
   height: auto;
+
+  font-family: Roboto-400;
 
   border-radius: 12px;
   border: 1px solid rgba(239, 237, 232, 0.3);
@@ -120,7 +124,8 @@
 
   cursor: pointer;
 
-  color: #efede8;
+  color: var(--white-color);
+  font-family: Roboto-400;
   font-size: 14px;
   text-align: left;
   line-height: 1.5;
@@ -144,15 +149,17 @@
   transform: translateY(100%);
 
   padding: 14px;
-  padding-right: auto;
+  /* padding-right: auto; */
+
+  font-family: Roboto-400;
 
   border-radius: 12px;
-  background-color: #1c1c1c;
+  background-color: var(--option-list-color);
 
   z-index: 100;
 
   @media screen and (min-width: 768px) {
-    width: 176px;
+    width: 204px;
     font-size: 16px;
   }
 }
