--- a/src/components/LogoutBtn/LogoutBtn.module.css
+++ b/src/components/LogoutBtn/LogoutBtn.module.css
@@ -1,4 +1,5 @@
 .log_out_link {
+  cursor: pointer;
   display: flex;
   font-size: 16px;
   align-items: center;
@@ -21,8 +22,8 @@
   }
 } */
 
-@media screen and (min-width: 1440px){
-  .log_out_link{
+@media screen and (min-width: 1440px) {
+  .log_out_link {
     margin-left: auto;
   }
 }
